# it2play

./: .gitignore  CMakeLists.txt  LICENSE  README.md  it_d_rm.c  it_d_rm.h  it_m_eff.c  it_m_eff.h  it_music.c  it_music.h  it_structs.c  it_structs.h  it_tables.c  it_tables.h
audiodrivers/: how_to_write_drivers.txt
audiodrivers/sdl/: sdldriver.c
audiodrivers/winmm/: winmm.c
it2drivers/: hq.c  hq.h  hq_fixsample.c  hq_fixsample.h  hq_m.c  hq_m.h  sb16.c  sb16.h  sb16_m.c  sb16_m.h  sb16mmx.c  sb16mmx.h  sb16mmx_m.c  sb16mmx_m.h  wavwriter.c  wavwriter.h  wavwriter_m.c  wavwriter_m.h  zerovol.c  zerovol.h
it2play/: make-linux.sh  make-macos-arm.sh  make-macos-intel.sh  make-msys2-clang.sh  make-msys2-gcc.sh
it2play/src/: it2play.c  posix.h
it2play/vs2019_project/: it2play.sln  it2play.vcxproj  it2play.vcxproj.filters
loaders/: it.c  it.h  mod.c  mod.h  s3m.c  s3m.h
